fix: fix overflow issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,5 +35,5 @@ body {
 }
 
 .as-horizontal >.as-split-area {
-  overflow-y: hidden!important;;
+
 }
